# naicode

./: AGENTS.md  defs.bzl  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
.codex/skills/remote-tests/: SKILL.md
.github/workflows/: bazel.yml  naicode-publish-existing.yml  naicode-release.yml  prepare-naicode-release.yml  retry-macos-x64.yml
.superpowers/brainstorm/956-1783671917/: .server-stopped  blue-theme-options-v4.html  coherent-flow-v2.html  visual-direction.html  waiting-after-theme-v5.html  welcome-model-theme-v3.html
bazel/rules/testing/bwrap/: BUILD.bazel  defs.bzl
bazel/rules/testing/bwrap/fixtures/: bwrap_smoke.rs
bazel/rules/testing/bwrap/src/: lib.rs  lib_tests.rs
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: Cargo.toml
codex-rs/agent-graph-store/src/: store.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client_tests.rs
codex-rs/app-server/: BUILD.bazel  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/src/: experimental_api.rs
codex-rs/app-server-test-client/: README.md
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: app_server_tracing.rs  attestation.rs  auth_mode.rs  bespoke_event_handling.rs  command_exec.rs  config_manager_service.rs  current_time.rs  extensions.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models_refresh_worker.rs  models_refresh_worker_tests.rs  outgoing_message.rs  provider_runtime_refresh.rs  request_processors.rs  thread_state.rs  thread_status.rs  transport_tests.rs
codex-rs/cli/src/: app_cmd.rs  doctor.rs  lib.rs  login.rs  main.rs  state_db_recovery.rs
codex-rs/code-mode-host/: Cargo.toml
codex-rs/code-mode-host/tests/: stdio.rs
codex-rs/code-mode/src/: remote_session.rs  remote_session_tests.rs
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  telemetry.rs
codex-rs/codex-client/src/: lib.rs  retry.rs
codex-rs/codex-experimental-api-macros/src/: lib.rs
codex-rs/codex-mcp/src/: connection_manager.rs  connection_manager_tests.rs  lib.rs  rmcp_client.rs  tool_search_diagnostics.rs
codex-rs/config/src/: config_toml.rs  merge_tests.rs  permissions_toml.rs  schema.rs  types.rs
codex-rs/core/: BUILD.bazel  README.md  config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: command_migration.rs  lib.rs  loader.rs  manager.rs  manager_tests.rs  store.rs
codex-rs/core-skills/src/: service.rs  service_tests.rs
codex-rs/core/src/: client.rs  client_tests.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_thread.rs  compact.rs  compact_model_fallback.rs  compact_remote.rs  compact_remote_request.rs  compact_remote_v2.rs  compact_remote_v2_attempt.rs  compact_tests.rs  compact_token_budget.rs  connectors.rs  environment_selection.rs  exec_policy.rs  hook_runtime.rs  lib.rs  local_runtime_paths.rs  mcp.rs  mcp_skill_dependencies.rs  mcp_tests.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  mcp_tool_exposure.rs  model_provider_runtime.rs  prompt_debug.rs  realtime_conversation.rs  responses_metadata.rs  responses_retry.rs  session_rollout_init_error.rs  session_startup_prewarm.rs  state_db_bridge.rs  stream_events_utils.rs  test_support.rs  thread_manager.rs  thread_manager_tests.rs  thread_rollout_truncation_tests.rs  turn_metadata.rs  turn_metadata_tests.rs  (+1 more)
codex-rs/exec-server-protocol/src/: protocol.rs  rpc.rs  rpc_tests.rs
codex-rs/exec-server/src/: client.rs  client_recovery_tests.rs  environment.rs  file_read.rs  lib.rs  local_file_system.rs  local_process.rs  network_policy_decisions.rs  network_policy_decisions_tests.rs  process.rs  process_sandbox.rs  process_sandbox_tests.rs  remote.rs  remote_process.rs  rpc.rs  server.rs  telemetry.rs  trace_context.rs  trace_context_tests.rs
codex-rs/exec-server/testing/: BUILD.bazel  README.md  bwrap_exec_server.rs  bwrap_exec_server_smoke.rs  bwrap_exec_server_tests.rs
codex-rs/exec-server/tests/: http_client.rs  http_request.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  event_processor_with_human_output_tests.rs  event_processor_with_jsonl_output_tests.rs  lib.rs  lib_tests.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/external-agent-migration/src/: lib.rs
codex-rs/features/src/: feature_configs.rs  lib.rs  tests.rs
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/linux-sandbox/src/: dns_routing.rs  dns_routing_tests.rs  dns_setup.rs  dns_setup_tests.rs  launcher.rs  lib.rs  linux_run_main.rs  linux_run_main_tests.rs  proxy_routing.rs
codex-rs/login/src/: lib.rs  server.rs
codex-rs/mcp-server/src/: message_processor.rs
codex-rs/model-provider-info/src/: lib.rs
codex-rs/network-proxy/: Cargo.toml
codex-rs/tui/: tooltips.txt
scripts/: stage_npm_packages.py
(+506 files in other folders)
